--- a/index.mdx
+++ b/index.mdx
@@ -48,5 +48,5 @@ This is a work in progress MVP and currently features no front-end, the backend 
 import { Player } from 'video-react'
 
 <Player>
-      <source src="assets/network.mp4" />
+      <source src="/assets/network.mp4" />
 </Player>
